test/libsolidity/syntaxTests/inlineAssembly/assembly_empty_option_list_dialect.sol
function f() pure {
    assembly "evmasm" () {}
}
// ----
// ParserError 2314: (43-44): Expected 'StringLiteral' but got ')'
